# AMR_fleet_gui

./: .eslintrc.json  .gitignore  README.md  frames_2026-03-21_14.12.17.gv  package-lock.json  package.json
public/: index.html
public/ros/: nav2d-old.js  nav2d.js
src/app/: App.jsx
src/components/: Camera.jsx  Map.jsx
src/pages/: ControlPage.jsx
src/shared/constants/: index.js
ui_package/: CMakeLists.txt  package.xml
ui_package/launch/: flask_launch.py  folders_handler.py  map_server.launch.py  ui.launch.py
ui_package/maps/Group1/: Map1.yaml  Map3.yaml
ui_package/param/: current_map_route.yaml
ui_package/paths/Group1/Map1/: Route1.csv
ui_package/scripts/: folders_handler.py  gui_map_downsampler.py  way_points_handler.py
ui_package/src/: config  flask_app.py  ros  static  way_points_handler.py
ui_package/src/config/: config.json
ui_package/src/ros/: nav2d.js
ui_package/src/static/css/: main.923bd0bd.css  main.b25a674f.css  main.b25a674f.css.map  main.f6158d52.css  main.f6158d52.css.map
ui_package/src/static/js/: main.09c76fe5.js  main.09c76fe5.js.map  main.af03318a.js  main.af03318a.js.LICENSE.txt  main.af03318a.js.map  main.decaa35c.js  nav2d.js
ui_package/src/templates/: index.html
web_ui/: .eslintrc.json  package-lock.json  package.json  tailwind.config.js
web_ui/public/: index.html
web_ui/public/config/: config.json
web_ui/public/ros/: config-loader.js  nav2d.js  ros2d.js
web_ui/scripts/: generate-config-json.js  postbuild-symlink.js
web_ui/src/app/: App.jsx
web_ui/src/components/: Camera.jsx  Header.jsx  Joystick.jsx  Map.jsx
web_ui/src/layouts/: appLayout.jsx
web_ui/src/pages/: ControlPage.jsx  InfoPage.jsx  MapPage.jsx  RoutePage.jsx
web_ui/src/shared/: laser_scan_gui.js
web_ui/src/shared/constants/: index.js
web_ui/src/shared/styles/: global.css  icons.css
web_ui/src/shared/ui/: Button.jsx  RoundedButton.jsx
web_ui/src/shared/ui/Switcher/: styles.css
web_ui/src/stores/: index.js
